# tomahawk-android

./: .gitignore  AndroidManifest.xml  README.md  build.gradle  lint.xml  pom.xml  proguard-android.txt
.tx/: config
app/: build.gradle  lint.xml
app/libs/: circularprogressview-debug.aar
app/src/main/assets/js/resolvers/spotify/native/: CMakeLists.txt
app/src/main/assets/js/resolvers/spotify/native/CMakeModules/: FindMicrohttpd.cmake  FindSpotify.cmake
assets/js/: tomahawk.js  tomahawk_android.js  tomahawk_android_post.js  tomahawk_android_pre.js
gradle/script/: git-version.gradle
gradle/wrapper/: gradle-wrapper.properties
jni/: Android.mk  Application.mk  api.h  base64.h  jni_glue.cpp  jni_glue.h  key.h  logger.cpp  logger.h  run_loop.cpp  run_loop.h  sound_driver.cpp  sound_driver.h  tasks.cpp  tasks.h
libs/: spotify-player-1.0.0-beta10.aar  spotify-player-1.0.0-beta9.aar  spotifysdk-1.0.0-beta8.aar
res/anim/: slide_in_left.xml  slide_out_right.xml
res/drawable/: above_shadow_darker.xml  above_shadow_page_indicator.xml  above_shadow_slightly_darker.xml  activated_background_holo_dark.xml  apptheme_btn_toggle_holo_light.xml  below_shadow.xml  btn_cab_done_tomahawk.xml  btn_check_holo_dark.xml  btn_radio_holo_dark.xml  circle.xml  circle_black.xml  circle_focused.xml  circle_pressed.xml  edit_text_holo_dark.xml  fastscroll_thumb_holo.xml  ic_action_favorites_underlined.xml  list_selector_background_transition_holo_dark.xml  list_selector_holo_dark.xml  rectangle_black.xml  (+44 more)
res/drawable-hdpi/: .directory
tomahawk-android-test/: AndroidManifest.xml
(+1398 files in other folders)
